Changes for 1.6.1.2
* Fixing non-serialization error when attempting to save the game after a successful aa gun roll, but before selecting casualties. (veqryn)

* Improved bombing result display to show ignored dice if there are any, and improving history panel to show the rolls for each target unit. (veqryn)

* Fixed integer array error in Strategy Bombing with Heavy Bombers, causing the second half of all rolls to not be rolled, thereby defaulting to one each. (veqryn)

* Fixed null pointer for undoing a placement made by UK in global 1940 maps, caused by the new no-air-checking delegate [players will need to update their 1940 maps though]. (veqryn)

* Creating framework for TripleA to use proxies to connect to the internet. Allowing map downloading, PBEM/PBF, and dice servers to use a proxy. (veqryn)

* Improving "Draw Territory Borders On Top" so that it will automatically switch to "medium" if you are on "low/default" and are zooming, and switch back once you stop zooming out. (veqryn)

* Changing lobby moderator ban/mute options to make more sense, by only giving 3 options: name only, everything, or cancel. (veqryn) 

* Adding a backup lobby properties location on the tripleawarclub, in addition to the one on sourceforge. (veqryn)

* Fixed null pointer error in MovePanel.selectEndPoint when clicking to move a unit to a territory with no connections. (veqryn)


Changes for 1.6.1.1
* Fixing in loading old engine jars caused by odd pathnames. (veqryn)

* Made AA Guns appear in battle, then disappear after firing if they could not participate any further. (veqryn)

* Fixed bug causing stacked aa guns to all fire with the attack power of the most powerful aa gun in the group. (veqryn)

* Fixed some math bugs in low luck picking of aa casualties for maps with non-standard aa guns. (veqryn)

* Made massive updates to 1.5.2.1 and 1.6 so that they can work as 'old' jars and be run from 1.6.1.1 or future versions. (veqryn)
